# power-manager

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  power-manager.qbs
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
data/settings/: CMakeLists.txt  io.liri.hardware.power.enums.xml  io.liri.hardware.power.gschema.xml  settings.qbs
data/systemd/: CMakeLists.txt  liri-daemon-power.service.in
scripts/: txpull.sh  txpush.sh  update_qmltypes.sh
src/daemon/: CMakeLists.txt  batterywatcher.cpp  daemon.qbs  io.liri.PowerManager.desktop  io.liri.PowerManager.desktop.in  lidwatcher.cpp  lidwatcher.h  liri-power-manager.desktop  main.cpp  plugin.cpp  plugin.h  plugin.json  powermanager.cpp  powermanager.h  translation.cpp  translation.h
src/daemon/translations/: io.liri.PowerManager_da.desktop  io.liri.PowerManager_fr.desktop  io.liri.PowerManager_it.desktop  io.liri.PowerManager_pl.desktop  io.liri.PowerManager_tr.desktop  io.liri.PowerManager_zh_CN.desktop  liri-power-manager_fr.ts  liri-power-manager_id.ts  liri-power-manager_ja.ts  liri-power-manager_lt.ts  liri-power-manager_pt_BR.ts  liri-power-manager_tr.ts  liri-power-manager_zh_CN.ts
src/imports/power/: CMakeLists.txt  batteriesmodel.cpp  batteriesmodel.h  battery.cpp  battery.h  plugin.cpp  plugins.qmltypes  power.qbs  qmldir
src/indicators/power/: CMakeLists.txt  metadata.desktop  metadata.desktop.in
src/indicators/power/contents/: BatteryEntry.qml  main.qml
src/indicators/power/translations/: metadata_ar.desktop  metadata_da.desktop  metadata_lt.desktop  metadata_pl.desktop  metadata_ru.desktop  metadata_tr.desktop  metadata_zh_CN.desktop  power_da.ts  power_fr.ts  power_lt.ts  power_pt_BR.ts  power_tr.ts
src/settings/power/: CMakeLists.txt  metadata.desktop  metadata.desktop.in
src/settings/power/contents/: AutomaticSuspendDialog.qml  BatteryListItem.qml  Preflet.qml  main.qml
src/settings/power/translations/: metadata_da.desktop  metadata_fr.desktop  metadata_pt_BR.desktop  metadata_ru.desktop  metadata_tr.desktop  power.ts  power_da.ts  power_fr.ts  power_lt.ts  power_pl.ts  power_pt_BR.ts  power_ru.ts  power_tr.ts
src/statusarea/power/: CMakeLists.txt  metadata.desktop  metadata.desktop.in  power.qbs
src/statusarea/power/contents/: BatteryEntry.qml  main.qml
translations/daemon/: desktop.pot  desktop_da.po  desktop_de.po  desktop_fr.po  desktop_it.po  desktop_lt.po  desktop_nl.po  desktop_pl.po  desktop_pt_BR.po  desktop_ru.po  desktop_tr.po  desktop_zh_CN.po  desktop_zh_TW.po  io.liri.PowerManager_it.desktop  io.liri.PowerManager_lt.desktop  io.liri.PowerManager_pt_BR.desktop  io.liri.PowerManager_ru.desktop  liri-power-manager.ts  liri-power-manager_ar.ts  liri-power-manager_ca.ts  liri-power-manager_da.ts  liri-power-manager_de.ts  liri-power-manager_es_419.ts  liri-power-manager_fr.ts  liri-power-manager_id.ts  liri-power-manager_it.ts  liri-power-manager_ja.ts  liri-power-manager_lt.ts  liri-power-manager_nl.ts  liri-power-manager_pl.ts  liri-power-manager_pt_BR.ts  liri-power-manager_ru.ts  liri-power-manager_ru_RU.ts  liri-power-manager_tr.ts  liri-power-manager_zh_CN.ts
translations/indicator/: metadata.pot  metadata_ar.po  metadata_da.po  metadata_fr.desktop  metadata_it.po  metadata_lt.po  metadata_pt_BR.desktop  metadata_pt_BR.po  metadata_ru.po  metadata_ru_RU.po  metadata_tr.desktop  metadata_tr.po  power.ts  power_da.ts  power_fr.ts  power_it.ts  power_lt.ts  power_pl.ts  power_ru.ts  power_ru_RU.ts  power_tr.ts  power_zh_CN.ts
translations/setting/: metadata_da.desktop  metadata_lt.desktop  metadata_pl.desktop
translations/settings/: metadata.pot  metadata_ar.po  metadata_ast.po  metadata_ast_ES.po  metadata_bg.po  metadata_ca.po  metadata_ca_ES.po  metadata_cs_CZ.po  metadata_cy.po  metadata_da.po  metadata_da_DK.po  metadata_de.po  metadata_el.po  metadata_es.po  metadata_es_419.po  metadata_es_MX.po  metadata_fr.po  metadata_he.po  metadata_hr_HR.po  metadata_hu.po  metadata_id.po  metadata_it.po  metadata_ja.po  metadata_ja_JP.po  metadata_kk.po  metadata_ko.po  metadata_lt.po  metadata_nl.po  metadata_no.po  metadata_pam.po  metadata_pl.po  metadata_pt.po  metadata_pt_BR.po  metadata_pt_PT.po  metadata_ru.po  metadata_ru_RU.po  metadata_sk.po  metadata_sv.po  metadata_tr.po  metadata_zh_CN.desktop  (+15 more)
translations/statusarea/: metadata.pot  metadata_da.po  metadata_de.po  metadata_fr.po  metadata_it.po  metadata_nl.po  metadata_pl.po  metadata_pt_BR.po  metadata_zh_CN.po  power.ts  power_da.ts  power_de.ts  power_fr.ts  power_it.ts  power_lt.ts  power_nl.ts  power_pl.ts  power_pt_BR.ts  power_ru.ts  power_ru_RU.ts  power_tr.ts  power_zh_CN.ts
